--- a/Reverse Geocoding/Base.lproj/Main.storyboard
+++ b/Reverse Geocoding/Base.lproj/Main.storyboard
@@ -1,24 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MapViewController" customModule="Reverse_Geocoding" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="3nc-xu-yRa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <gestureRecognizers/>
+                            </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IbR-iK-WHR">
+                                <rect key="frame" x="162.66666666666666" y="371" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="IbR-iK-WHR" secondAttribute="height" multiplier="1:1" id="chf-xv-trM"/>
+                                    <constraint firstAttribute="height" constant="50" id="qc0-do-MPa"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VEl-Nw-rhS">
+                                <rect key="frame" x="122" y="302.66666666666669" width="133" height="60.333333333333314"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coordinates" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IT3-O1-yIc">
+                                        <rect key="frame" x="20.666666666666657" y="20" width="93" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="IT3-O1-yIc" firstAttribute="leading" secondItem="VEl-Nw-rhS" secondAttribute="leading" constant="20" id="E0t-XC-JLI"/>
+                                    <constraint firstItem="IT3-O1-yIc" firstAttribute="top" secondItem="VEl-Nw-rhS" secondAttribute="top" constant="20" id="Mnn-Zm-xS3"/>
+                                    <constraint firstAttribute="trailing" secondItem="IT3-O1-yIc" secondAttribute="trailing" constant="20" id="uhY-qO-Ycq"/>
+                                    <constraint firstAttribute="bottom" secondItem="IT3-O1-yIc" secondAttribute="bottom" constant="20" id="zyX-bo-x34"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yIX-CN-tbS" customClass="CurrentLocationButton" customModule="Reverse_Geocoding" customModuleProvider="target">
+                                <rect key="frame" x="244" y="748" width="115" height="30"/>
+                                <state key="normal" title="Current Location"/>
+                                <connections>
+                                    <action selector="currentLocationButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZFP-z2-4Jh"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="IbR-iK-WHR" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-10" id="37R-mh-lQ9"/>
+                            <constraint firstItem="VEl-Nw-rhS" firstAttribute="centerX" secondItem="IbR-iK-WHR" secondAttribute="centerX" id="3P8-TN-AZa"/>
+                            <constraint firstItem="VEl-Nw-rhS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6yn-ds-eQt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3nc-xu-yRa" secondAttribute="trailing" id="BtP-kc-tT4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="VEl-Nw-rhS" secondAttribute="trailing" constant="20" id="NBy-IE-kqC"/>
+                            <constraint firstItem="3nc-xu-yRa" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="US1-Bw-hJM"/>
+                            <constraint firstItem="yIX-CN-tbS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="bpI-JF-5Ml"/>
+                            <constraint firstItem="IbR-iK-WHR" firstAttribute="top" secondItem="VEl-Nw-rhS" secondAttribute="bottom" constant="8" id="iOj-2o-D7J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yIX-CN-tbS" secondAttribute="trailing" constant="16" id="rq8-W5-Qgw"/>
+                            <constraint firstItem="IbR-iK-WHR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tNy-GO-W7C"/>
+                            <constraint firstItem="3nc-xu-yRa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vld-9Z-vj8"/>
+                            <constraint firstAttribute="bottom" secondItem="3nc-xu-yRa" secondAttribute="bottom" id="wzb-Mq-4km"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="addressContainerView" destination="VEl-Nw-rhS" id="Dzc-mH-ic2"/>
+                        <outlet property="addressLabel" destination="IT3-O1-yIc" id="1Jj-zm-Wwv"/>
+                        <outlet property="mapView" destination="3nc-xu-yRa" id="MuB-QK-7wb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <customObject id="4xM-g9-nfZ" customClass="GeocodingStyleKit" customModule="Reverse_Geocoding" customModuleProvider="target">
+                    <connections>
+                        <outletCollection property="pinViewTargets" destination="IbR-iK-WHR" collectionClass="NSMutableArray" id="S5b-yx-fKU"/>
+                    </connections>
+                </customObject>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="33.251231527093594"/>
         </scene>
     </scenes>
 </document>
